// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`test bun add command > command handles args correctly 1`] = `
[
  "bun",
  "add",
  "@antfu/ni",
  "-D",
]
`;

exports[`test bun run command > command handles args correctly 1`] = `
[
  "bun",
  "run",
  "arg0",
  "arg1-0 arg1-1",
]
`;

exports[`test npm add command > command handles args correctly 1`] = `
[
  "npm",
  "i",
  "@antfu/ni",
  "-D",
]
`;

exports[`test npm run command > command handles args correctly 1`] = `
[
  "npm",
  "run",
  "arg0",
  "--",
  "arg1-0 arg1-1",
]
`;

exports[`test pnpm add command > command handles args correctly 1`] = `
[
  "pnpm",
  "add",
  "@antfu/ni",
  "-D",
]
`;

exports[`test pnpm run command > command handles args correctly 1`] = `
[
  "pnpm",
  "run",
  "arg0",
  "arg1-0 arg1-1",
]
`;

exports[`test pnpm@6 add command > command handles args correctly 1`] = `
[
  "pnpm",
  "add",
  "@antfu/ni",
  "-D",
]
`;

exports[`test pnpm@6 run command > command handles args correctly 1`] = `
[
  "pnpm",
  "run",
  "arg0",
  "--",
  "arg1-0 arg1-1",
]
`;

exports[`test yarn add command > command handles args correctly 1`] = `
[
  "yarn",
  "add",
  "@antfu/ni",
  "-D",
]
`;

exports[`test yarn run command > command handles args correctly 1`] = `
[
  "yarn",
  "run",
  "arg0",
  "arg1-0 arg1-1",
]
`;

exports[`test yarn@berry add command > command handles args correctly 1`] = `
[
  "yarn",
  "add",
  "@antfu/ni",
  "-D",
]
`;

exports[`test yarn@berry run command > command handles args correctly 1`] = `
[
  "yarn",
  "run",
  "arg0",
  "arg1-0 arg1-1",
]
`;
